wx-core/include/generated/ffi_s.h

// CLASS: wxSizerItem
wxClassInfo *wxSizerItem_CLASSINFO();
wxSizerItem *wxSizerItem_new(int width, int height, int proportion, int flag, int border, wxObject * user_data);
wxSizerItem *wxSizerItem_new1(wxWindow * window, const wxSizerFlags * flags);
wxSizerItem *wxSizerItem_new2(wxWindow * window, int proportion, int flag, int border, wxObject * user_data);
wxSizerItem *wxSizerItem_new3(wxSizer * sizer, const wxSizerFlags * flags);
wxSizerItem *wxSizerItem_new4(wxSizer * sizer, int proportion, int flag, int border, wxObject * user_data);
void wxSizerItem_AssignWindow(wxSizerItem * self, wxWindow * window);
void wxSizerItem_AssignSizer(wxSizerItem * self, wxSizer * sizer);
void wxSizerItem_AssignSpacer(wxSizerItem * self, const wxSize * size);
void wxSizerItem_AssignSpacer1(wxSizerItem * self, int w, int h);
wxSize *wxSizerItem_CalcMin(wxSizerItem * self);
void wxSizerItem_DeleteWindows(wxSizerItem * self);
void wxSizerItem_DetachSizer(wxSizerItem * self);
int wxSizerItem_GetBorder(const wxSizerItem * self);
int wxSizerItem_GetFlag(const wxSizerItem * self);
int wxSizerItem_GetId(const wxSizerItem * self);
wxSize *wxSizerItem_GetMinSize(const wxSizerItem * self);
void wxSizerItem_SetMinSize(wxSizerItem * self, const wxSize * size);
void wxSizerItem_SetMinSize1(wxSizerItem * self, int x, int y);
wxPoint *wxSizerItem_GetPosition(const wxSizerItem * self);
int wxSizerItem_GetProportion(const wxSizerItem * self);
wxRect *wxSizerItem_GetRect(wxSizerItem * self);
wxSize *wxSizerItem_GetSize(const wxSizerItem * self);
wxSizer * wxSizerItem_GetSizer(const wxSizerItem * self);
wxSize *wxSizerItem_GetSpacer(const wxSizerItem * self);
wxObject * wxSizerItem_GetUserData(const wxSizerItem * self);
wxWindow * wxSizerItem_GetWindow(const wxSizerItem * self);
bool wxSizerItem_IsShown(const wxSizerItem * self);
bool wxSizerItem_IsSizer(const wxSizerItem * self);
bool wxSizerItem_IsSpacer(const wxSizerItem * self);
bool wxSizerItem_IsWindow(const wxSizerItem * self);
void wxSizerItem_SetBorder(wxSizerItem * self, int border);
void wxSizerItem_SetDimension(wxSizerItem * self, const wxPoint * pos, const wxSize * size);
void wxSizerItem_SetFlag(wxSizerItem * self, int flag);
void wxSizerItem_SetId(wxSizerItem * self, int id);
void wxSizerItem_SetInitSize(wxSizerItem * self, int x, int y);
void wxSizerItem_SetProportion(wxSizerItem * self, int proportion);
void wxSizerItem_SetRatio(wxSizerItem * self, int width, int height);
void wxSizerItem_SetUserData(wxSizerItem * self, wxObject * user_data);
void wxSizerItem_Show(wxSizerItem * self, bool show);
// CLASS: wxSlider
wxClassInfo *wxSlider_CLASSINFO();
wxSlider *wxSlider_new();
wxSlider *wxSlider_new1(wxWindow * parent, wxWindowID id, int value, int min_value, int max_value, const wxPoint * pos, const wxSize * size, long style, const wxValidator * validator, const wxString * name);
void wxSlider_ClearSel(wxSlider * self);
void wxSlider_ClearTicks(wxSlider * self);
bool wxSlider_Create(wxSlider * self, wxWindow * parent, wxWindowID id, int value, int min_value, int max_value, const wxPoint * point, const wxSize * size, long style, const wxValidator * validator, const wxString * name);
int wxSlider_GetLineSize(const wxSlider * self);
int wxSlider_GetMax(const wxSlider * self);
int wxSlider_GetMin(const wxSlider * self);
int wxSlider_GetPageSize(const wxSlider * self);
int wxSlider_GetSelEnd(const wxSlider * self);
int wxSlider_GetSelStart(const wxSlider * self);
int wxSlider_GetThumbLength(const wxSlider * self);
int wxSlider_GetTickFreq(const wxSlider * self);
int wxSlider_GetValue(const wxSlider * self);
void wxSlider_SetLineSize(wxSlider * self, int line_size);
void wxSlider_SetMin(wxSlider * self, int min_value);
void wxSlider_SetMax(wxSlider * self, int max_value);
void wxSlider_SetPageSize(wxSlider * self, int page_size);
void wxSlider_SetRange(wxSlider * self, int min_value, int max_value);
void wxSlider_SetSelection(wxSlider * self, int start_pos, int end_pos);
void wxSlider_SetThumbLength(wxSlider * self, int len);
void wxSlider_SetTick(wxSlider * self, int tick_pos);
void wxSlider_SetTickFreq(wxSlider * self, int freq);
void wxSlider_SetValue(wxSlider * self, int value);
// CLASS: wxSpinButton
wxClassInfo *wxSpinButton_CLASSINFO();
wxSpinButton *wxSpinButton_new();
wxSpinButton *wxSpinButton_new1(wxWindow * parent, wxWindowID id, const wxPoint * pos, const wxSize * size, long style, const wxString * name);
bool wxSpinButton_Create(wxSpinButton * self, wxWindow * parent, wxWindowID id, const wxPoint * pos, const wxSize * size, long style, const wxString * name);
int wxSpinButton_GetIncrement(const wxSpinButton * self);
int wxSpinButton_GetMax(const wxSpinButton * self);
int wxSpinButton_GetMin(const wxSpinButton * self);
int wxSpinButton_GetValue(const wxSpinButton * self);
void wxSpinButton_SetIncrement(wxSpinButton * self, int value);
void wxSpinButton_SetRange(wxSpinButton * self, int min, int max);
void wxSpinButton_SetValue(wxSpinButton * self, int value);
// CLASS: wxSpinCtrl
wxClassInfo *wxSpinCtrl_CLASSINFO();
wxSpinCtrl *wxSpinCtrl_new();
wxSpinCtrl *wxSpinCtrl_new1(wxWindow * parent, wxWindowID id, const wxString * value, const wxPoint * pos, const wxSize * size, long style, int min, int max, int initial, const wxString * name);
bool wxSpinCtrl_Create(wxSpinCtrl * self, wxWindow * parent, wxWindowID id, const wxString * value, const wxPoint * pos, const wxSize * size, long style, int min, int max, int initial, const wxString * name);
int wxSpinCtrl_GetBase(const wxSpinCtrl * self);
int wxSpinCtrl_GetMax(const wxSpinCtrl * self);
int wxSpinCtrl_GetMin(const wxSpinCtrl * self);
wxString *wxSpinCtrl_GetTextValue(const wxSpinCtrl * self);
int wxSpinCtrl_GetValue(const wxSpinCtrl * self);
int wxSpinCtrl_GetIncrement(const wxSpinCtrl * self);
bool wxSpinCtrl_SetBase(wxSpinCtrl * self, int base);
void wxSpinCtrl_SetRange(wxSpinCtrl * self, int min_val, int max_val);
void wxSpinCtrl_SetSelection(wxSpinCtrl * self, long from, long to);
void wxSpinCtrl_SetValue(wxSpinCtrl * self, const wxString * text);
void wxSpinCtrl_SetValue1(wxSpinCtrl * self, int value);
void wxSpinCtrl_SetIncrement(wxSpinCtrl * self, int value);
// CLASS: wxSpinCtrlDouble
wxClassInfo *wxSpinCtrlDouble_CLASSINFO();
wxSpinCtrlDouble *wxSpinCtrlDouble_new();
wxSpinCtrlDouble *wxSpinCtrlDouble_new1(wxWindow * parent, wxWindowID id, const wxString * value, const wxPoint * pos, const wxSize * size, long style, double min, double max, double initial, double inc, const wxString * name);
bool wxSpinCtrlDouble_Create(wxSpinCtrlDouble * self, wxWindow * parent, wxWindowID id, const wxString * value, const wxPoint * pos, const wxSize * size, long style, double min, double max, double initial, double inc, const wxString * name);
unsigned int wxSpinCtrlDouble_GetDigits(const wxSpinCtrlDouble * self);
double wxSpinCtrlDouble_GetIncrement(const wxSpinCtrlDouble * self);
double wxSpinCtrlDouble_GetMax(const wxSpinCtrlDouble * self);
double wxSpinCtrlDouble_GetMin(const wxSpinCtrlDouble * self);
wxString *wxSpinCtrlDouble_GetTextValue(const wxSpinCtrlDouble * self);
double wxSpinCtrlDouble_GetValue(const wxSpinCtrlDouble * self);
void wxSpinCtrlDouble_SetDigits(wxSpinCtrlDouble * self, unsigned int digits);
void wxSpinCtrlDouble_SetIncrement(wxSpinCtrlDouble * self, double inc);
void wxSpinCtrlDouble_SetRange(wxSpinCtrlDouble * self, double min_val, double max_val);
void wxSpinCtrlDouble_SetValue(wxSpinCtrlDouble * self, const wxString * text);
void wxSpinCtrlDouble_SetValue1(wxSpinCtrlDouble * self, double value);
// CLASS: wxSpinDoubleEvent
wxClassInfo *wxSpinDoubleEvent_CLASSINFO();
wxSpinDoubleEvent *wxSpinDoubleEvent_new1(const wxSpinDoubleEvent * event);
double wxSpinDoubleEvent_GetValue(const wxSpinDoubleEvent * self);
void wxSpinDoubleEvent_SetValue(wxSpinDoubleEvent * self, double value);
// CLASS: wxSpinEvent
wxClassInfo *wxSpinEvent_CLASSINFO();
int wxSpinEvent_GetPosition(const wxSpinEvent * self);
void wxSpinEvent_SetPosition(wxSpinEvent * self, int pos);
// CLASS: wxSplashScreen
wxClassInfo *wxSplashScreen_CLASSINFO();
wxSplashScreen *wxSplashScreen_new(const wxBitmap * bitmap, long splash_style, int milliseconds, wxWindow * parent, wxWindowID id, const wxPoint * pos, const wxSize * size, long style);
long wxSplashScreen_GetSplashStyle(const wxSplashScreen * self);
wxSplashScreenWindow * wxSplashScreen_GetSplashWindow(const wxSplashScreen * self);
int wxSplashScreen_GetTimeout(const wxSplashScreen * self);
void wxSplashScreen_OnCloseWindow(wxSplashScreen * self, wxCloseEvent * event);