wx-core/src/generated/ffi_s.rs


    // wxSizerItem
    pub fn wxSizerItem_CLASSINFO() -> *mut c_void;
    pub fn wxSizerItem_new(
        width: c_int,
        height: c_int,
        proportion: c_int,
        flag: c_int,
        border: c_int,
        user_data: *mut c_void,
    ) -> *mut c_void;
    pub fn wxSizerItem_new1(window: *mut c_void, flags: *const c_void) -> *mut c_void;
    pub fn wxSizerItem_new2(
        window: *mut c_void,
        proportion: c_int,
        flag: c_int,
        border: c_int,
        user_data: *mut c_void,
    ) -> *mut c_void;
    pub fn wxSizerItem_new3(sizer: *mut c_void, flags: *const c_void) -> *mut c_void;
    pub fn wxSizerItem_new4(
        sizer: *mut c_void,
        proportion: c_int,
        flag: c_int,
        border: c_int,
        user_data: *mut c_void,
    ) -> *mut c_void;
    // DTOR: pub fn wxSizerItem_~wxSizerItem(self_: *mut c_void);
    pub fn wxSizerItem_AssignWindow(self_: *mut c_void, window: *mut c_void);
    pub fn wxSizerItem_AssignSizer(self_: *mut c_void, sizer: *mut c_void);
    pub fn wxSizerItem_AssignSpacer(self_: *mut c_void, size: *const c_void);
    pub fn wxSizerItem_AssignSpacer1(self_: *mut c_void, w: c_int, h: c_int);
    pub fn wxSizerItem_CalcMin(self_: *mut c_void) -> *mut c_void;
    pub fn wxSizerItem_DeleteWindows(self_: *mut c_void);
    pub fn wxSizerItem_DetachSizer(self_: *mut c_void);
    pub fn wxSizerItem_GetBorder(self_: *const c_void) -> c_int;
    pub fn wxSizerItem_GetFlag(self_: *const c_void) -> c_int;
    pub fn wxSizerItem_GetId(self_: *const c_void) -> c_int;
    pub fn wxSizerItem_GetMinSize(self_: *const c_void) -> *mut c_void;
    pub fn wxSizerItem_SetMinSize(self_: *mut c_void, size: *const c_void);
    pub fn wxSizerItem_SetMinSize1(self_: *mut c_void, x: c_int, y: c_int);
    pub fn wxSizerItem_GetPosition(self_: *const c_void) -> *mut c_void;
    pub fn wxSizerItem_GetProportion(self_: *const c_void) -> c_int;
    // NOT_SUPPORTED: pub fn wxSizerItem_GetRatio(self_: *const c_void) -> float;
    pub fn wxSizerItem_GetRect(self_: *mut c_void) -> *mut c_void;
    pub fn wxSizerItem_GetSize(self_: *const c_void) -> *mut c_void;
    pub fn wxSizerItem_GetSizer(self_: *const c_void) -> *mut c_void;
    pub fn wxSizerItem_GetSpacer(self_: *const c_void) -> *mut c_void;
    pub fn wxSizerItem_GetUserData(self_: *const c_void) -> *mut c_void;
    pub fn wxSizerItem_GetWindow(self_: *const c_void) -> *mut c_void;
    pub fn wxSizerItem_IsShown(self_: *const c_void) -> bool;
    pub fn wxSizerItem_IsSizer(self_: *const c_void) -> bool;
    pub fn wxSizerItem_IsSpacer(self_: *const c_void) -> bool;
    pub fn wxSizerItem_IsWindow(self_: *const c_void) -> bool;
    pub fn wxSizerItem_SetBorder(self_: *mut c_void, border: c_int);
    pub fn wxSizerItem_SetDimension(self_: *mut c_void, pos: *const c_void, size: *const c_void);
    pub fn wxSizerItem_SetFlag(self_: *mut c_void, flag: c_int);
    pub fn wxSizerItem_SetId(self_: *mut c_void, id: c_int);
    pub fn wxSizerItem_SetInitSize(self_: *mut c_void, x: c_int, y: c_int);
    pub fn wxSizerItem_SetProportion(self_: *mut c_void, proportion: c_int);
    pub fn wxSizerItem_SetRatio(self_: *mut c_void, width: c_int, height: c_int);
    // BLOCKED: pub fn wxSizerItem_SetRatio1(self_: *mut c_void, size: wxSize);
    // NOT_SUPPORTED: pub fn wxSizerItem_SetRatio2(self_: *mut c_void, ratio: float);
    // BLOCKED: pub fn wxSizerItem_SetSizer(self_: *mut c_void, sizer: *mut c_void);
    // BLOCKED: pub fn wxSizerItem_SetSpacer(self_: *mut c_void, size: *const c_void);
    pub fn wxSizerItem_SetUserData(self_: *mut c_void, user_data: *mut c_void);
    // BLOCKED: pub fn wxSizerItem_SetWindow(self_: *mut c_void, window: *mut c_void);
    pub fn wxSizerItem_Show(self_: *mut c_void, show: bool);

    // wxSlider
    pub fn wxSlider_CLASSINFO() -> *mut c_void;
    pub fn wxSlider_new() -> *mut c_void;
    pub fn wxSlider_new1(
        parent: *mut c_void,
        id: c_int,
        value: c_int,
        min_value: c_int,
        max_value: c_int,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        validator: *const c_void,
        name: *const c_void,
    ) -> *mut c_void;
    // DTOR: pub fn wxSlider_~wxSlider(self_: *mut c_void);
    pub fn wxSlider_ClearSel(self_: *mut c_void);
    pub fn wxSlider_ClearTicks(self_: *mut c_void);
    pub fn wxSlider_Create(
        self_: *mut c_void,
        parent: *mut c_void,
        id: c_int,
        value: c_int,
        min_value: c_int,
        max_value: c_int,
        point: *const c_void,
        size: *const c_void,
        style: c_long,
        validator: *const c_void,
        name: *const c_void,
    ) -> bool;
    pub fn wxSlider_GetLineSize(self_: *const c_void) -> c_int;
    pub fn wxSlider_GetMax(self_: *const c_void) -> c_int;
    pub fn wxSlider_GetMin(self_: *const c_void) -> c_int;
    pub fn wxSlider_GetPageSize(self_: *const c_void) -> c_int;
    pub fn wxSlider_GetSelEnd(self_: *const c_void) -> c_int;
    pub fn wxSlider_GetSelStart(self_: *const c_void) -> c_int;
    pub fn wxSlider_GetThumbLength(self_: *const c_void) -> c_int;
    pub fn wxSlider_GetTickFreq(self_: *const c_void) -> c_int;
    pub fn wxSlider_GetValue(self_: *const c_void) -> c_int;
    pub fn wxSlider_SetLineSize(self_: *mut c_void, line_size: c_int);
    pub fn wxSlider_SetMin(self_: *mut c_void, min_value: c_int);
    pub fn wxSlider_SetMax(self_: *mut c_void, max_value: c_int);
    pub fn wxSlider_SetPageSize(self_: *mut c_void, page_size: c_int);
    pub fn wxSlider_SetRange(self_: *mut c_void, min_value: c_int, max_value: c_int);
    pub fn wxSlider_SetSelection(self_: *mut c_void, start_pos: c_int, end_pos: c_int);
    pub fn wxSlider_SetThumbLength(self_: *mut c_void, len: c_int);
    pub fn wxSlider_SetTick(self_: *mut c_void, tick_pos: c_int);
    pub fn wxSlider_SetTickFreq(self_: *mut c_void, freq: c_int);
    pub fn wxSlider_SetValue(self_: *mut c_void, value: c_int);

    // wxSpinButton
    pub fn wxSpinButton_CLASSINFO() -> *mut c_void;
    pub fn wxSpinButton_new() -> *mut c_void;
    pub fn wxSpinButton_new1(
        parent: *mut c_void,
        id: c_int,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        name: *const c_void,
    ) -> *mut c_void;
    // DTOR: pub fn wxSpinButton_~wxSpinButton(self_: *mut c_void);
    pub fn wxSpinButton_Create(
        self_: *mut c_void,
        parent: *mut c_void,
        id: c_int,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        name: *const c_void,
    ) -> bool;
    pub fn wxSpinButton_GetIncrement(self_: *const c_void) -> c_int;
    pub fn wxSpinButton_GetMax(self_: *const c_void) -> c_int;
    pub fn wxSpinButton_GetMin(self_: *const c_void) -> c_int;
    pub fn wxSpinButton_GetValue(self_: *const c_void) -> c_int;
    pub fn wxSpinButton_SetIncrement(self_: *mut c_void, value: c_int);
    pub fn wxSpinButton_SetRange(self_: *mut c_void, min: c_int, max: c_int);
    pub fn wxSpinButton_SetValue(self_: *mut c_void, value: c_int);

    // wxSpinCtrl
    pub fn wxSpinCtrl_CLASSINFO() -> *mut c_void;
    pub fn wxSpinCtrl_new() -> *mut c_void;
    pub fn wxSpinCtrl_new1(
        parent: *mut c_void,
        id: c_int,
        value: *const c_void,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        min: c_int,
        max: c_int,
        initial: c_int,
        name: *const c_void,
    ) -> *mut c_void;
    pub fn wxSpinCtrl_Create(
        self_: *mut c_void,
        parent: *mut c_void,
        id: c_int,
        value: *const c_void,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        min: c_int,
        max: c_int,
        initial: c_int,
        name: *const c_void,
    ) -> bool;
    pub fn wxSpinCtrl_GetBase(self_: *const c_void) -> c_int;
    pub fn wxSpinCtrl_GetMax(self_: *const c_void) -> c_int;
    pub fn wxSpinCtrl_GetMin(self_: *const c_void) -> c_int;
    pub fn wxSpinCtrl_GetTextValue(self_: *const c_void) -> *mut c_void;
    pub fn wxSpinCtrl_GetValue(self_: *const c_void) -> c_int;
    pub fn wxSpinCtrl_GetIncrement(self_: *const c_void) -> c_int;
    pub fn wxSpinCtrl_SetBase(self_: *mut c_void, base: c_int) -> bool;
    pub fn wxSpinCtrl_SetRange(self_: *mut c_void, min_val: c_int, max_val: c_int);
    pub fn wxSpinCtrl_SetSelection(self_: *mut c_void, from: c_long, to: c_long);
    pub fn wxSpinCtrl_SetValue(self_: *mut c_void, text: *const c_void);
    pub fn wxSpinCtrl_SetValue1(self_: *mut c_void, value: c_int);
    pub fn wxSpinCtrl_SetIncrement(self_: *mut c_void, value: c_int);

    // wxSpinCtrlDouble
    pub fn wxSpinCtrlDouble_CLASSINFO() -> *mut c_void;
    pub fn wxSpinCtrlDouble_new() -> *mut c_void;
    pub fn wxSpinCtrlDouble_new1(
        parent: *mut c_void,
        id: c_int,
        value: *const c_void,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        min: c_double,
        max: c_double,
        initial: c_double,
        inc: c_double,
        name: *const c_void,
    ) -> *mut c_void;
    pub fn wxSpinCtrlDouble_Create(
        self_: *mut c_void,
        parent: *mut c_void,
        id: c_int,
        value: *const c_void,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        min: c_double,
        max: c_double,
        initial: c_double,
        inc: c_double,
        name: *const c_void,
    ) -> bool;
    pub fn wxSpinCtrlDouble_GetDigits(self_: *const c_void) -> c_uint;
    pub fn wxSpinCtrlDouble_GetIncrement(self_: *const c_void) -> c_double;
    pub fn wxSpinCtrlDouble_GetMax(self_: *const c_void) -> c_double;
    pub fn wxSpinCtrlDouble_GetMin(self_: *const c_void) -> c_double;
    pub fn wxSpinCtrlDouble_GetTextValue(self_: *const c_void) -> *mut c_void;
    pub fn wxSpinCtrlDouble_GetValue(self_: *const c_void) -> c_double;
    pub fn wxSpinCtrlDouble_SetDigits(self_: *mut c_void, digits: c_uint);
    pub fn wxSpinCtrlDouble_SetIncrement(self_: *mut c_void, inc: c_double);
    pub fn wxSpinCtrlDouble_SetRange(self_: *mut c_void, min_val: c_double, max_val: c_double);
    pub fn wxSpinCtrlDouble_SetValue(self_: *mut c_void, text: *const c_void);
    pub fn wxSpinCtrlDouble_SetValue1(self_: *mut c_void, value: c_double);

    // wxSpinDoubleEvent
    pub fn wxSpinDoubleEvent_CLASSINFO() -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxSpinDoubleEvent_new(command_type: wxEventType, winid: c_int, value: c_double) -> *mut c_void;
    pub fn wxSpinDoubleEvent_new1(event: *const c_void) -> *mut c_void;
    pub fn wxSpinDoubleEvent_GetValue(self_: *const c_void) -> c_double;
    pub fn wxSpinDoubleEvent_SetValue(self_: *mut c_void, value: c_double);

    // wxSpinEvent
    pub fn wxSpinEvent_CLASSINFO() -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxSpinEvent_new(command_type: wxEventType, id: c_int) -> *mut c_void;
    pub fn wxSpinEvent_GetPosition(self_: *const c_void) -> c_int;
    pub fn wxSpinEvent_SetPosition(self_: *mut c_void, pos: c_int);

    // wxSplashScreen
    pub fn wxSplashScreen_CLASSINFO() -> *mut c_void;
    pub fn wxSplashScreen_new(
        bitmap: *const c_void,
        splash_style: c_long,
        milliseconds: c_int,
        parent: *mut c_void,
        id: c_int,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
    ) -> *mut c_void;
    // DTOR: pub fn wxSplashScreen_~wxSplashScreen(self_: *mut c_void);
    pub fn wxSplashScreen_GetSplashStyle(self_: *const c_void) -> c_long;
    pub fn wxSplashScreen_GetSplashWindow(self_: *const c_void) -> *mut c_void;
    pub fn wxSplashScreen_GetTimeout(self_: *const c_void) -> c_int;
    pub fn wxSplashScreen_OnCloseWindow(self_: *mut c_void, event: *mut c_void);
